--- a/client/scss/components/_slider__in-article.scss
+++ b/client/scss/components/_slider__in-article.scss
@@ -1,8 +1,10 @@
+$slider-one-column-width: (100 / 12) * 1%;
+
 .slider--in-article {
   .slides-container {
     @include respond-to('medium') {
-      width: calc(100vw - #{map-get($container-padding, 'medium')} - 12.5%);
-      margin-left: 12.5%;
+      width: calc(100vw - #{map-get($container-padding, 'medium')} - $slider-one-column-width);
+      margin-left: $slider-one-column-width;
     }
 
     @include respond-to('large') {
